--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ JWT_SECRET=ashutosh
 BRAINTREE_MERCHANT_ID=jmsyh5mrf5j65syp
 BRAINTREE_PUBLIC_KEY=xf42nx86g3s6fgzg
 BRAINTREE_PRIVATE_KEY=5dfd755c15eb39e38165f74ad036e55d
-MONGO_URL=mongodb+srv://ag2233:ashutosh@cluster0.l8gzayn.mongodb.net/ecommerce
+MONGO_URL=mongodb+srv://pdat28012003:2G2jIyuIQFZTIPbk@ecommercecluster.ivipv8z.mongodb.net/Ecommerce
 PORT=8080
